--- a/P1/P1_NoteBook.ipynb
+++ b/P1/P1_NoteBook.ipynb
@@ -536,7 +536,7 @@
     "        return findSequence(Arr, value, index + 1) + 1\n",
     "    end\n",
     "end\n",
-    "maxnumber, repeatnumber = findmax(maximum(findSequence(Arr, i, j) for j ∈ 1:length(Arr)) for i ∈ 1:9)\n",
+    "repeatnumber, maxnumber = findmax(maximum(findSequence(Arr, i, j) for j ∈ 1:length(Arr)) for i ∈ 1:9)\n",
     "print(\"The number: $maxnumber\\nThe number of appearances: $repeatnumber\")"
    ]
   },
