--- a/P3/notebook.ipynb
+++ b/P3/notebook.ipynb
@@ -676,6 +676,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Problem 3:***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ***Part A:***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SNAData = CSV.read(\"Social_Network_Ads.csv\", DataFrame);\n",
+    "fm = @formula(Purchased ~ EstimatedSalary + Age);\n",
+    "logit = glm(fm, SNAData, Binomial(), ProbitLink());\n",
+    "ClassedPredict = round.(Int, predict(logit, SNAData));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\text{True Positives = 98}$"
+      ],
+      "text/plain": [
+       "L\"$\\text{True Positives = 98}$\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\text{True Negatives = 239}$"
+      ],
+      "text/plain": [
+       "L\"$\\text{True Negatives = 239}$\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\text{False Positives = 18}$"
+      ],
+      "text/plain": [
+       "L\"$\\text{False Positives = 18}$\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\text{False Negatives = 45}$"
+      ],
+      "text/plain": [
+       "L\"$\\text{False Negatives = 45}$\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\text{Success Rate = 84.25 \\%}$"
+      ],
+      "text/plain": [
+       "L\"$\\text{Success Rate = 84.25 \\%}$\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "SuccessRate = count(i -> SNAData.Purchased[i] == ClassedPredict[i], 1:length(ClassedPredict)) / length(ClassedPredict) * 100\n",
+    "TruePositive = count(i -> SNAData.Purchased[i] == 1 && ClassedPredict[i] == 1, 1:length(ClassedPredict))\n",
+    "TrueNegative = count(i -> SNAData.Purchased[i] == 0 && ClassedPredict[i] == 0, 1:length(ClassedPredict))\n",
+    "FalsePositive = count(i -> SNAData.Purchased[i] == 0 && ClassedPredict[i] == 1, 1:length(ClassedPredict))\n",
+    "FalseNegative = count(i -> SNAData.Purchased[i] == 1 && ClassedPredict[i] == 0, 1:length(ClassedPredict))\n",
+    "display(L\"\\text{True Positives = %$TruePositive}\")\n",
+    "display(L\"\\text{True Negatives = %$TrueNegative}\")\n",
+    "display(L\"\\text{False Positives = %$FalsePositive}\")\n",
+    "display(L\"\\text{False Negatives = %$FalseNegative}\")\n",
+    "display(L\"\\text{Success Rate = %$SuccessRate \\%}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
