--- a/P3/notebook.ipynb
+++ b/P3/notebook.ipynb
@@ -1061,6 +1061,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ***Problem 4:***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 234,
    "metadata": {},
